Bug 259470 - The configure button in the battery monitor applet doesn't do anything
Summary: The configure button in the battery monitor applet doesn't do anything
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-battery (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 264336 264535 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-10 20:38 UTC by fatgerman
Modified: 2011-01-27 22:22 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fatgerman 2010-12-10 20:38:40 UTC
Version:           unspecified (using KDE 4.5.85) 
OS:                Linux

Click on the battery monitor icon in the system tray, and then click the 'Configure Power Management...' button at the bottom right. Nothing happens.

Reproducible: Always
Comment 1 Anne-Marie Mahfouf 2010-12-10 21:10:18 UTC
Is your system configured for single click (default) or double-click (check in System Settings -> Input Devices -> Mouse in Icons section.

If it's single click then a single-click on the Battery Tooltip Settings icon will open the configuration dialog. If you have double-click then you need to double click on this icon.

It works as expected here, trunk (post beta 2)
Comment 2 fatgerman 2010-12-10 21:32:40 UTC
My system is set to double-click, and a double click does open the configuration dialog. However this is both a change from the previous version (where a single click worked) and is also inconsistent with the 'Sleep' and 'Hibernate' buttons which both respond to a single click.
Comment 3 Marco Martin 2010-12-18 15:09:10 UTC
not reproducible here
Comment 4 Sebastian Kügler 2010-12-23 15:05:11 UTC
Fixed already, the name of the kcmshell module changed.
Comment 5 Martin Koller 2011-01-27 08:48:46 UTC
I have to reopen this, since:
- the problem is still here in 4.6.0; the configure dialog only appears on double-click (I have defined to open files with double click)
- it is NOT expected behaviour if a click on a BUTTON does not do anything
  and this has nothing to do with the single/double click setting, since
  a PushButton ALWAYS needs to react on single-click
- the two buttons to the left of the configure button "sleep" and "hibernate" react directly on single click
Comment 6 Sebastian Kügler 2011-01-27 21:33:42 UTC
SVN commit 1217549 by sebas:

single click opens the config

activated() is checked against KGlobalSettings::singleClick(), clicked() isn't.

FIXED-IN:4.6.1
BUG:259470



 M  +1 -1      battery.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1217549
Comment 7 Sebastian Kügler 2011-01-27 21:40:56 UTC
SVN commit 1217550 by sebas:

single click opens the config

activated() is checked against KGlobalSettings::singleClick(), clicked()
isn't.

forward-port from r1217549
CCBUG:259470

 M  +1 -1      battery.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1217550
Comment 8 Pino Toscano 2011-01-27 22:21:26 UTC
*** Bug 264535 has been marked as a duplicate of this bug. ***
Comment 9 Pino Toscano 2011-01-27 22:22:54 UTC
*** Bug 264336 has been marked as a duplicate of this bug. ***