single click opens the config

activated() is checked against KGlobalSettings::singleClick(), clicked() isn't.

FIXED-IN:4.6.1
BUG:259470


svn path=/branches/KDE/4.6/kdebase/workspace/; revision=1217549